Update Document prezentare saptamana8.html

--- a/Document prezentare saptamana8.html
+++ b/Document prezentare saptamana8.html
@@ -111,7 +111,7 @@
                 Lucrul cu api-uri externe aplicatiei noastre
             </h2>
             <p>
-                Am folosit geopy din python pentru determinarea unor locatii si obnerea coordonatelor si adresei complete ,tot cu ajutorul geopy implementarea unei harti si posibilitatea de a vedea locatiile introduse.
+                Am folosit geopy din python pentru determinarea unor locatii si obnerea coordonatelor si adresei complete ,tot cu ajutorul geopy si folium implementarea unei harti si posibilitatea de a vedea locatiile introduse.
             </p>
         </section>
         <section>
